<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="Home" />
        <item
            android:id="@+id/nav_stores"
            android:title="Stores" />
        <item
            android:id="@+id/nav_favorites"
            android:title="Favorites" />
        <item
            android:id="@+id/nav_shopping_cart"
            android:title="Shopping Cart" />
        <item
            android:id="@+id/nav_map"
            android:title="Map" />
    </group>

...
